# isaiahnoelpulidosalazar.github.io

./: ecwebsitebuilder.html  index.html  robots.txt  sitemap.xml
admin/: index.html  index.js
android/: build.gradle  settings.gradle
api/: package-lock.json  package.json  server.js
calm/: index.css  index.html  index.js
chease/: sample.chease
chess/: index.html  index.js
contact/: index.html
cs/: chease.cs  choke.cs
css/: ECSS.css  ECSS_minified.css  index.css
documentconverter/: index.html  index.js
ecdemo/: index.css  index.html
ecide/: index.css  index.html  index.js
ecwebsitebuilder/: index.css  index.html
erp/: index.css  index.html  index.js
js/: ECElements.js  ECElements_minified.js  ECStyleSheet.js  ECStyleSheet_minified.js  index.js
login/: index.html  index.js
minesweeper/: index.html
newpost/: index.html  index.js
nuget/: nugetpackage.slnx
numbermemorygame/: index.html  index.js
pos/: index.html  index.js
posts/: another-test.html  index.html  index.js  quantum-mechanics.html  test.html  the-nostalgic-resurrection-of-friendster.html  the-symphony-of-sisterhood-anita-magsaysay-ho-s-ode-to-the-filipina.html  uma-musume-pretty-derby.html  what-is-glass-.html
projects/: index.html
py/: NOTE.txt  README.md  hello.py  pyproject.toml  swap_demo.py
py/pythonbundle/: __init__.py  check.py  cipher.py  convert.py  dictionarily.py  easy_sql.py  excellent_reader.py  node.py  simple_file_handler.py  sort.py
pypi/: pyproject.toml
qr/: index.html  index.js
rainbow/: index.css  index.html  index.js
snake/: index.html
(+57 files in other folders)
